@@ -41,7 +41,9 @@
 <li>magick/render.c (DrawPatternPath): Don't leak memory if
 fill_pattern or stroke_pattern of cloned draw_info are not null.
 Fixes oss-fuzz issue 18948 &quot;graphicsmagick:coder_MVG_fuzzer:
-Indirect-leak in CloneImage&quot;.</li>
+Indirect-leak in CloneImage&quot;.
+(PrimitiveInfoRealloc): Clear freshly-allocated PrimitiveInfo
+memory.</li>
 </ul>
 </blockquote>
 <p>2019-11-23  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
